# domino-game-cli

./: FULLSCREEN_DISPLAY.md  README.md  board_renderer.py  main.py  mvp.py  mvp_test.py  pyproject.toml  requirements.txt  run_tests.py  test_renderer.py
.github/workflows/: ci.yml
docs/: DOMINO_GAME_FLOW.md  DOMINO_RULES.md  TUTORIAL_MODE_PLAN.md  mvp.md
domino_game/: __init__.py  cli.py
domino_game/game/: __init__.py  ai.py  deck.py  engine.py  scoring.py
domino_game/models/: __init__.py  board.py  domino.py  player.py
domino_game/ui/: __init__.py  legacy_display.py  setup_menu.py
domino_game/ui/renderer/: __init__.py  board_display.py  game_renderer.py  player_display.py
tests/: __init__.py
tests/test_game/: __init__.py  test_ai.py  test_deck.py  test_engine.py  test_scoring.py
tests/test_models/: test_board.py  test_domino.py  test_player.py
tests/test_ui/: test_renderer.py
