[project]
name = "domino-game-cli"
version = "2.0.0"
description = "A beautiful CLI application to play Caribbean dominoes (2v2)"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [
    { name = "Chris" }
]
dependencies = [
    "typer[all]>=0.9.0",
    "InquirerPy>=0.3.4",
    "rich>=13.7.0",
]

[project.scripts]
domino = "mvp:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mvp.py"]
