[project]
name = "domino-game-cli"
version = "2.0.0"
description = "A beautiful CLI application to play Caribbean dominoes (2v2)"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
    { name = "Chris" }
]
dependencies = [
    "typer[all]>=0.9.0",
    "rich>=13.7.0",
]

[project.scripts]
domino = "main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["domino_game"]
